syntax = "proto3";

package api.file.v1;

import "google/api/annotations.proto";

option go_package = "github.com/ntquang98/go-rkinetics-service/api/file/v1;v1";
option java_multiple_files = true;
option java_package = "api.file.v1";
option java_outer_classname = "FileProtoV1";

service File {
	rpc UploadFile (UploadFileRequest) returns (UploadFileReply) {
		option (google.api.http) = {
			post: "/v1/file-upload"
			body: "*"
		};
	}
}

message UploadFileRequest {
	string filename = 1;
}
message UploadFileReply {
	string file_url = 2;
}